# opsgenie_oncall_notification

./: .pdm-python  Dockerfile  LICENSE  README.md  docker-compose.yaml  env.example  pyproject.toml  run.sh
src/opsgenie_oncall_notification/: __main__.py  gchat_space.json  gchat_userid.json  notification.py
